# indico-plugins

./: .gitignore
cloud_captchas/: package-lock.json
payment_voucher/: README.md  pyproject.toml  pytest.ini
payment_voucher/indico_payment_voucher/: __init__.py  controllers.py  plugin.py  util.py
payment_voucher/indico_payment_voucher/templates/: event_payment_form.html
