[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indico-plugin-payment-voucher"
version = "1.0.0"
description = "Voucher payment plugin for Indico"
requires-python = ">=3.9"
dependencies = [
    "indico>=3.0"
]

[project.entry-points."indico.plugins"]
payment_voucher = "indico_payment_voucher.plugin:VoucherPaymentPlugin"

[tool.setuptools.package-data]
"indico_payment_voucher" = ["templates/*.html"]
